[gd_scene load_steps=6 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://ffa_widgets/io_port_widget/io_port_widget.gd" type="Script" id=2]
[ext_resource path="res://ffa_widgets/io_port_widget/config_gui.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.309739, 0.298309, 0.664063, 1 )
light_color = Color( 0.207031, 0.207031, 0.207031, 1 )
dark_color = Color( 0.839844, 0.839844, 0.839844, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.664063, 0.298309, 0.298309, 1 )
light_color = Color( 0.843137, 0.843137, 0.843137, 1 )
dark_color = Color( 0.223529, 0.223529, 0.223529, 1 )
border_size = 1
border_blend = true
draw_bg = true

[node name="io_port_widget" type="ReferenceFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
color_disabled = Color( 0.378906, 0.378906, 0.378906, 1 )
color_output = Color( 1, 0.453125, 0.453125, 1 )
color_input = Color( 0.5, 0.507812, 1, 1 )

[node name="config_canvas" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0

[node name="config_gui" parent="config_canvas" instance=ExtResource( 3 )]

[node name="sunken_panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="raised_panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 2 )

[node name="color_frame" type="ColorFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 1.0
color = Color( 0.378906, 0.378906, 0.378906, 1 )

[node name="icon" type="TextureFrame" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = -16.0
margin/bottom = -16.0
stretch_mode = 0


